--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
         menuIcon.onclick = function(){
             menuBox.classList.toggle("open-menu")
+
+            if(menuBox.classList.contains("open-menu")){
+
+                menuIcon.src = "icon-close.svg" 
+            }
+
+            else{
+                menuIcon.src = "icon-hamburger.svg"
+            }
         }
     </script>
 </body>
